Return action ID when get item

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,3 +2,4 @@
 <title>Community Fridge - {% block title %}{% endblock %}</title>
 <h2>{{ self.title() }}</h2>
 {% block content %}{% endblock %}
+<a href="/static/swagger-ui.html">API doc</a>
